--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Henrique Junqueira <41648535+henriquejunqueira@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-loader": "^9.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -13,6 +14,8 @@
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
-    "@babel/preset-react": "^7.26.3"
+    "@babel/preset-react": "^7.26.3",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
