--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "repository": "https://github.com/henriquejunqueira/trilha-react-rockseat.git",
   "author": "Henrique Junqueira <41648535+henriquejunqueira@users.noreply.github.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "webpack serve",
+    "build": "cross-env NODE_ENV=production webpack"
+  },
   "dependencies": {
     "babel-loader": "^9.2.1",
     "react": "^19.0.0",
@@ -15,6 +19,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.6.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
