--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
