--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
@@ -27,6 +30,7 @@
     "react-refresh": "^0.16.0",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
+    "typescript": "^5.7.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
